@@ -5,6 +5,7 @@
 - Support streams type
 - Keys displaying strategy
 - Clone connection functionality
+- Fixed history workflow
 
 1.11.0 / November 26, 2017
 [Alexandr Topilski]
